[package]
name = "rust-os"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Pardo <dpardo25@proton.me>"]

[profile.dev]       # Default profile for development builds (cargo build)
panic = "abort"     # Disable stack unwinding on panic

[profile.release]   # Default profile for release builds (cargo build --release)
panic = "abort"     # Disable stack unwinding on panic