[package]
name = "rust-os"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Pardo <dpardo25@proton.me>"]

[[bin]]
name = "rust-os"
test = true
bench = false

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.2.0", default-features = false }
futures-util = { version = "0.3.4", default-features = false, features = ["alloc"] }

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",       # Exit QEMU for test runs
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33     # Success defined as 0x10: iobase transforms to (0x10 << 1) | 1
test-timeout = 60               # Timeout in seconds

[[test]]
name = "should_panic"
harness = false         # Disable harness for should_panic test to remove need for test_runner

[[test]]
name = "stack_overflow"
harness = false         # Can't return from double fault, so it should run on its own